# django-restframeworkd-mongodb

./: .gitignore  README.md  pyproject.toml
apps/cards/: models.py  urls.py  views.py
apps/cards/migrations/: 0001_initial.py
apps/decks/: admin.py  models.py  urls.py  views.py
apps/decks/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
